# MCP-Driven-Cognitive-Swarm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.simple.yml  docker-compose.yml  pyproject.toml
agent/: graph.py  synthesis.py  tooling.py
agent/swarm/: memory.py  registry.py
data/artifacts/: player_shares.json
docs/: DEPLOY.md  SWARM.md  conformal_study.md  wc26_report.md
evals/: ab_report.py  golden_set.py
gateway/: app.py
mcp_servers/: demo_data.py
mcp_servers/code_server/: runner.py  sandbox.py  server.py
mcp_servers/data_server/: backend.py  server.py
mcp_servers/news_server/: server.py
scripts/: build_club_shares.py  conformal_study.py  smoke_test.sh  wc26_predict.py  wwc_bracket.py
src/data/: api_football.py  international_results.py  leagues.py  odds_api.py  statsbomb.py  womens_international.py
src/eval/: metrics.py
src/models/: bracket.py  conformal.py  predict.py  ratings.py  sequence.py
tests/: test_agent.py  test_api_football.py  test_bracket.py  test_conformal_methods.py  test_headline.py  test_international_results.py  test_leagues.py  test_mcp_servers.py  test_providers.py  test_sandbox.py
ui/app/: layout.tsx  manifest.ts  page.tsx
ui/app/api/bracket/: route.ts
ui/app/api/leagues/: route.ts
ui/app/bracket/: page.tsx
ui/app/leagues/[id]/: page.tsx
ui/app/predict/: page.tsx
ui/components/features/prediction/: conformal-visualizer.tsx  headline-timeline.tsx  predict-console.tsx  scoreline-heatmap.tsx  tie-detail.tsx
ui/components/ui/: nav.tsx  panel.tsx
ui/lib/: types.ts  viz.ts
(+2 files in other folders)
