[project]
name = "predictive-modeling"
version = "0.1.0"
description = "Soccer tournament prediction pipeline with betting-market value analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "requests>=2.32",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "soccerdata>=1.8",
    "statsbombpy>=1.13",
    "feedparser>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "mcp>=1.9",
    "langgraph>=0.4",
    "langchain-mcp-adapters>=0.1",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10", "matplotlib>=3.8"]
sentiment = ["torch>=2.3", "transformers>=4.42"]
llm = ["langchain-anthropic>=0.3", "anthropic>=0.50"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
